--- a/src/main/resources/templates/admin/formNewArtist.html
+++ b/src/main/resources/templates/admin/formNewArtist.html
@@ -38,12 +38,16 @@
         <span th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"></span>
 
         <div>
-            <label>Cognome:</label> <span><input required type="text" th:field="*{cognome}"/></span>
+            <label>Cognome:</label> <span> <input required type="text" th:field="*{cognome}"/></span>
         </div>
         <span th:if="${#fields.hasErrors('cognome')}" th:errors="*{cognome}"></span>
 
         <div>
-            <label>Data di nascita:</label> <span><input required type="date" name="dataN"/></span>
+            <label>Data di nascita:</label>
+            <span>
+                <input  type="date" required name="dataN"/>
+                <p th:if="${#fields.hasErrors('dataNascita')}" th:errors="*{dataNascita}"></p>
+            </span>
         </div>
 
         <div>
