--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -27,7 +27,7 @@
     </div>
     <div th:if="${movie}" class="box-container" th:object="${movie}">
         <div class="details">
-            <img th:src="@{*{ImagePath}}">
+            <img th:if="${image}" th:src="@{'data:image/*;base64,'+${image.base64Image}}">
         </div>
         <div class="container">
             <h1 th:text="*{titolo}">Titolo</h1>
