--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -27,7 +27,7 @@
     </div>
     <div th:if="${movie}" class="box-container" th:object="${movie}">
         <div class="details">
-            <img th:if="${image}" th:src="@{'data:image/*;base64,'+${image.base64Image}}">
+            <img th:src="@{'data:image/*;base64,'+${movie.image.base64Image}}">
         </div>
         <div class="container">
             <h1 th:text="*{titolo}">Titolo</h1>
@@ -77,7 +77,7 @@
                         </div>
                         <div class="comment">
                             <div class="author">
-                                    <span th:text="${news.user.username} + ': ' + ${news.titolo}">
+                                    <span th:text="${news.autore} + ': ' + ${news.titolo}">
                                         Utente: Titolo
                                     </span>
                             </div>
