--- a/src/main/resources/templates/formLogin.html
+++ b/src/main/resources/templates/formLogin.html
@@ -7,6 +7,25 @@
     </title>
     <link rel="stylesheet" href="/css/stileForm.css"/>
     <link rel="stylesheet" href="/css/stileSfondo.css"/>
+    <!-- Per l'icona -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- Per mostrare la password-->
+    <script type="text/javascript">
+        function mostraPassword() {
+            var passwordInput = document.getElementById("password");
+            var eyeIcon = document.getElementById("eye-icon");
+
+            if (passwordInput.type === "password") {
+                passwordInput.type = "text";
+                eyeIcon.classList.remove("bi-eye-slash-fill");
+                eyeIcon.classList.add("bi-eye-fill");
+            } else {
+                passwordInput.type = "password";
+                eyeIcon.classList.remove("bi-eye-fill");
+                eyeIcon.classList.add("bi-eye-slash-fill");
+            }
+        }
+    </script>
 </head>
 
 <body>
@@ -22,7 +41,10 @@
         </div>
         <div>
             <span>Password:</span>
-            <span><input name="password" type="password" required/></span>
+            <span><input name="password" type="password" id="password" required/></span>
+            <span>
+                <i id="eye-icon" class="occhio bi bi-eye-slash-fill" onclick="mostraPassword()"></i>
+            </span>
         </div>
         <div>
             <span th:if="${param.error != null}">Username o password errati</span>
