--- a/src/main/resources/templates/formRegisterUser.html
+++ b/src/main/resources/templates/formRegisterUser.html
@@ -7,6 +7,25 @@
     </title>
     <link rel="stylesheet" href="/css/stileSfondo.css?version=2"/>
     <link rel="stylesheet" href="/css/stileDetails.css?version=2"/>
+    <!-- Per l'icona -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- Per mostrare la password-->
+    <script type="text/javascript">
+        function mostraPassword() {
+            var passwordInput = document.getElementById("password");
+            var eyeIcon = document.getElementById("eye-icon");
+
+            if (passwordInput.type === "password") {
+                passwordInput.type = "text";
+                eyeIcon.classList.remove("bi-eye-slash-fill");
+                eyeIcon.classList.add("bi-eye-fill");
+            } else {
+                passwordInput.type = "password";
+                eyeIcon.classList.remove("bi-eye-fill");
+                eyeIcon.classList.add("bi-eye-slash-fill");
+            }
+        }
+    </script>
 </head>
 
 <body>
@@ -32,7 +51,10 @@
             </div>
             <div>
                 <label class="line-pwd"> Password</label>
-                <input type="text" maxlength="30" class="password" required th:field="*{password}"/>
+                <input type="text" maxlength="30" class="password" id="password" required th:field="*{password}"/>
+                <span>
+                    <i id="eye-icon" class="occhio bi bi-eye-slash-fill" onclick="mostraPassword()"></i>
+                </span>
                 <span class="password" th:if="${#fields.hasErrors('password')}"
                       th:errors="${credentials.password}"
                       th:style="'color:red'"></span>
